# sdd-tee

./: .gitignore  CONTEXT.md  Makefile  PLAN.md  PROPOSAL.md  PROPOSAL_V4.md  README.md  SDD开发Token消耗度量指标体系设计方案.md  average_kimi.py  config.yaml  debug_audit.py  launch_glm.sh  launch_v3_group1.sh  launch_v3_remaining.sh  master_v3_runner.sh  next.md  proposal.md  requirements.txt  supervise_v3.sh  tasks.md  test_out.json
sdk-python/: pyproject.toml
sdk-python/agentcube/: __init__.py  agent_runtime.py  code_interpreter.py  exceptions.py
sdk-python/agentcube/clients/: __init__.py  agent_runtime_data_plane.py  code_interpreter_data_plane.py  control_plane.py
sdk-python/agentcube/utils/: __init__.py  http.py  log.py  utils.py
sdk-python/agentcube_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk-python/tests/: README.md  test_agent_runtime_client.py  test_agent_runtime_data_plane.py  test_code_interpreter_client.py  test_code_interpreter_data_plane.py  test_control_plane.py  test_exceptions.py  test_utils.py
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/: .dockerignore  .gitignore  .golangci.yml  CODE_OF_CONDUCT.md  LICENSE  Makefile  OWNERS  README.md  go.mod  go.sum  package-lock.json  pyproject.toml  pyrightconfig.json
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  good-first.md  question.md
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/.github/workflows/: build-push-release.yml  codegen-check.yml  codespell.yml  copyright-check.yml  dify-plugin-publish.yml  e2e.yml  lint.yml  main.yml  (+4 more)
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/client-go/: README.md
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/cmd/: OWNERS
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/docker/: Dockerfile  Dockerfile.picod  Dockerfile.router
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/docs/: getting-started.md
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/hack/: boilerplate.go.txt  boilerplate.py.txt  update-codegen.sh  update-copyright.sh
workspaces/cursor-cli_claude-4.6-opus_20260321T030900Z/sdk-python/: OWNERS  pyproject.toml
(+1361 files in other folders)
