[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcube-sdk"
version = "0.1.0"
description = "AgentCube Python SDK for Code Interpreter and Agent Runtime"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "PyJWT>=2.0.0",
    "cryptography",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcube*"]
namespaces = false
