[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcube"
version = "0.1.0"
description = "AgentCube monorepo meta-package"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["cmd/cli", "sdk-python"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"cmd/cli/examples/**" = ["E402"]
