[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcube-sdk"
version = "0.1.0"
description = "AgentCube Python SDK"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "PyJWT>=2.0.0",
    "cryptography",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcube*"]
